--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ Thumbs.db
 *~
 *.swp
 *.swo
-.vscode/
+.vscode/settings.json
+.vscode/launch.json
 .idea/
 
 # Logs
@@ -46,3 +47,8 @@ Thumbs.db
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Sensitive files
+api_keys.json
+_config_dev.yml
+__pycache__
